GH-3643: jena-benchmarks: Drop older shaded Jena baselines; keep only latest Jena 5 baseline
- Removed jena-benchmarks from parent POM
- Updated benchmarks to use Jena version 5.6.0 and remove deprecated references.
- Removed older shaded versions of Jena: 4.8.0, 5.1.0 and 5.5.0
- fixed code analysis warnings
- fixed old *480 names to *560
- now clearly use GraphMemValue vs GraphMemFast, discarding old graph names in test parametes
- updated org.apache.jena.mem.graph.helper.GraphTripleNodeHelper560 to support all graph implementations
- fixed scale in memory consumption rounding
- de-duplicated JHMDefaultOptions.java moved it to jena.jmh an renamed it to JmhDefaultOptions.java